--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="screen_home_button_add_note_text">Add Note</string>
     <string name="save">Save</string>
     <string name="dismiss">Dismiss</string>
+    <string name="delete">Delete Me</string>
 </resources>
